--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
-    margin: 0;
-    padding: 0;
+    /* margin: 0;
+    padding: 0; */
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
     text-decoration: none;
@@ -22,7 +22,7 @@ body{
     width: 850px;
     height: 550px;
     background: #fff;
-    margin: 20px;
+    margin: auto;
     border-radius: 30px;
     box-shadow: 0 0 30px rgba(0, 0, 0, .2);
     overflow: hidden;
@@ -236,4 +236,7 @@ form{ width: 100%; }
     .form-box { padding: 20px; }
 
     .toggle-panel h1{font-size: 30px; }
+}
+button:focus, button:focus-visible{
+    overflow: unset !important;
 }
